--- a/echo/deployment-echo.yaml
+++ b/echo/deployment-echo.yaml
@@ -21,6 +21,6 @@ spec:
       - name: echo
         image: hashicorp/http-echo
         args:
-        - -text=echo
+        - -text=oahu-2
         ports:
         - containerPort: 5678
